--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -61,8 +61,34 @@
                         </div>
                     </nav>
                 </div>
-                <p>&nbsp;</p>
 
+                <div style="text-align:right; margin-top:10px">
+                    <button id="clear-search"
+                                    name="clear-search" 
+                                    onclick="redirectToPage()"
+                                    class="btn waves-effect waves-luluble-pink luluble-pink">
+                                    Clear Search</button>
+                </div>
+                <div class="col s12 m6 offset-m3">
+                    <p></p>
+                </div>
+                {{!-- please make a space between clear search and the table --}}
+
+                <script>
+                    function redirectToPage() {
+                        const clearedUrl = "http://localhost:3000/archive";
+                        const currentUrl = window.location.href;
+                        const word = "search"
+                        const clear = document.querySelector('#clear-search');
+
+                        if (currentUrl.toString().includes(word)) {
+                            
+                            clear.addEventListener("click", function() {
+                                window.location.href = clearedUrl;
+                            });
+                        }
+                    }
+                </script>
 
                     <script>
                         const search = document.querySelector('#gsearch');
@@ -97,7 +123,10 @@
                         });
                     </script>
 
+                    {{!-- creates blank space --}}
+                    <caption>&nbsp;</caption>
 
+                    {{!-- table with all archived ingredients --}}
                     <table>
                         <thead>
                             <tr id="ing">
@@ -198,8 +227,35 @@
                                 </div>
                             </nav>
                         </div>
+                        <div style="text-align:right; margin-top:10px">
+                                <button id="clear-search"
+                                                name="clear-search" 
+                                                onclick="redirectToPage2()"
+                                                class="btn waves-effect waves-luluble-pink luluble-pink">
+                                                Clear Search</button>
+                        </div>
 
-                        <p>&nbsp;</p>
+                        <script>
+                            function redirectToPage2() {
+                                const clearedUrl = "http://localhost:3000/archive";
+                                const currentUrl = window.location.href;
+                                const word = "search"
+                                const clear = document.querySelector('#clear-search');
+
+                                if (currentUrl.toString().includes(word)) {
+                                    
+                                    clear.addEventListener("click", function() {
+                                        const newTabURL = clearedUrl + "#projects";
+                                        console.log(newTabURL);
+                                        window.location.href = newTabURL;
+                                    });
+                                }
+                            }
+                        </script>
+
+
+                        {{!-- search script for archive projects --}}
+
                         <script>
 
                             console.log("HELLOOOOOO");
@@ -228,84 +284,83 @@
                                 const stateObj2 = { url: '/archiveprojects/sci/' + scientistID2 };
                                 const title2 = '';
                                 const newUrl2 = '/archiveprojects/sci/' + scientistID2;
+                                console.log(window.location.href);
 
+                                // if search invalid
                                 if (searchTerm2.length === 0 || !validateSearchInput2(searchTerm2)) {
                                     window.location.assign("/archiveprojects");
-
                                 }
                                 else {
-                                    if (window.location.href.indexOf("archiveprojects/sci/" + scientistID2) !== -1) {
+                                    if (window.location.href.indexOf("archive/sci/" + scientistID2) !== -1) { // if the URL contains the right URL, search the correct search
                                         window.location.assign("/archiveprojects/sci/" + scientistID2 + "/search/" + searchTerm2);
+                                        console.log("no im here.");
                                     }
                                     else {
                                         window.location.assign("/archiveprojects/sci/" + scientistID2 + "/search/" + searchTerm2);
+                                        console.log("here!!");
                                     }
                                 }
                             });
-                            console.log(String(window.location.href));
                         </script>
 
-                            <div class="col s2 m6 l6">
-                                        
-                                {{#each project_results}}
-                                    {{!-- <a href="#terms" class="modal-trigger"> --}}
-                                        <div class="card luluble-light-pink darken-1">
-                                            <div class="card-content white-text">
-                                                {{!-- projects/{{this.project_name}} --}}
-                                                <span class="card-title"><a style="color: black;"
-                                                        href="/projects/{{this.project_id}}"><b>{{this.project_name}}</a></b></span>
-                                                <p style="color: black;">Client: {{this.client}}</p>
-                                                <p style="color: black;">{{this.date}}</p>
-                                                <div class="col s12">&nbsp;</div>
-                                                <div class="row">
-                                                    <div class = "col s12 m4 l4">
-                                                        <a href="#terms{{project_id}}" class="modal-trigger">
-                                                            <span class="btn-small luluble-light-grey">See More</span>
-                                                        </a>
+                        <div class="col s2 m6 l6">
+                                    
+                            {{#each project_results}}
+                                {{!-- <a href="#terms" class="modal-trigger"> --}}
+                                    <div class="card luluble-light-pink darken-1">
+                                        <div class="card-content white-text">
+                                            {{!-- projects/{{this.project_name}} --}}
+                                            <span class="card-title"><a style="color: black;"
+                                                    href="/projects/{{this.project_id}}"><b>{{this.project_name}}</a></b></span>
+                                            <p style="color: black;">Client: {{this.client}}</p>
+                                            <p style="color: black;">{{this.date}}</p>
+                                            <div class="col s12">&nbsp;</div>
+                                            <div class="row">
+                                                <div class = "col s12 m4 l4">
+                                                    <a href="#terms{{project_id}}" class="modal-trigger">
+                                                        <span class="btn-small luluble-light-grey">See More</span>
+                                                    </a>
+                                                </div>
+                                                <div class = "col s12 m4 l2"></div>
+                                                    <div class="delete_button">
+                                                        <a href="/unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey">Unarchive</a>
                                                     </div>
-                                                    <div class = "col s12 m4 l2"></div>
-                                                        <div class="delete_button">
-                                                            <a href="/unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light-grey luluble-light-grey">Unarchive</a>
-                                                        </div>
-                                        </div>
-                                </div>
-                                {{!-- </a> --}}
-
-                                <div class="modal" id="terms{{project_id}}">
-                                    <div class="row">
-                                        <div class="col s12">&nbsp;</div>
-                                        <div class="col s12"><b><font size="+2">{{this.project_name}}</font></b></div>
-                                        <div class="col s12">&nbsp;</div>
-                                        <div class="col s6">
-                                            <span><b>Client:</b> {{this.client}}<br></br><b>Date:</b> {{this.date}}</span>
-                                        </div>
-                                        <div class="col s6">
-                                            <span><b>Number of Formulas:</b> 3<br></br><b>Other: </b>Information</span>
-                                        </div>
-                                        <div class="col s12">&nbsp;</div>
-                                        {{!-- <div class="col s12 m6 l3">
-                                            <p></p>
-                                        </div>
-                                        <div class="col s12 m6 l3">
-                                            <p></p>
-                                        </div> --}}
-                    
                                     </div>
+                            </div>
+                            {{!-- </a> --}}
+
+                            <div class="modal" id="terms{{project_id}}">
+                                <div class="row">
+                                    <div class="col s12">&nbsp;</div>
+                                    <div class="col s12"><b><font size="+2">{{this.project_name}}</font></b></div>
+                                    <div class="col s12">&nbsp;</div>
+                                    <div class="col s6">
+                                        <span><b>Client:</b> {{this.client}}<br></br><b>Date:</b> {{this.date}}</span>
+                                    </div>
+                                    <div class="col s6">
+                                        <span><b>Number of Formulas:</b> 3<br></br><b>Other: </b>Information</span>
+                                    </div>
+                                    <div class="col s12">&nbsp;</div>
+                                    {{!-- <div class="col s12 m6 l3">
+                                        <p></p>
+                                    </div>
+                                    <div class="col s12 m6 l3">
+                                        <p></p>
+                                    </div> --}}
+                
                                 </div>
                             </div>
+                        </div>
 
-                            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-                            
-                            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-                            
-                            <script>
-                                $(document).ready(function () {
-                                    $('.modal').modal();
-                                })
-                            </script>
+                        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+                        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+                        <script>
+                            $(document).ready(function () {
+                                $('.modal').modal();
+                            })
+                        </script>
 
-                            <div class="card-action"></div>
-
+                        <div class="card-action"></div>
                             {{/each}}
 
                     </div>
@@ -317,9 +372,9 @@
                     });
 
                 </script>
-            </table>
-        </div>
+            </div>
         </div>
     </div>
-    </body>
+
+</body>
 </html>
