--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -303,7 +303,7 @@
             </nav>
         </div>
     </div>
-    
+
     <script>
         function redirectToPage() {
             const clearedUrl = "http://localhost:3000/inventory";
@@ -311,7 +311,7 @@
             
             if (currentUrl !== clearedUrl) {
                 window.location.href = clearedUrl;
-                    window.location.reload();
+                //window.location.reload();
             }
         }
 
