procedure and make trial buttons are now pretty

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -77,7 +77,7 @@
                             <p> </p>
 
                             <div class="add_button">
-                                <button id = "add_button" type="submit">Add Trial</button>
+                                <button id = "add_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Add Trial</button>
                                 {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                             </div>
                             <p> </p>
@@ -199,7 +199,7 @@
                                         <p> </p>
 
                                         <div class="add_trial_button">
-                                            <button id = "add_trial_button" type="submit">Add Ingredient</button>
+                                            <button id = "add_trial_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Add Ingredient</button>
                                             {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                         </div>
                                         <p> </p>
@@ -253,7 +253,7 @@
 
                                        
                                         <div class="make_trial_button">
-                                            <button id = "make_trial_button" type="submit">Make Trial</button>
+                                            <button id = "make_trial_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Make Trial</button>
                                             {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                         </div>
                                         <p> </p>
