--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -121,7 +121,7 @@
                                         <p> </p>
 
                                         <div class="add_proc_button">
-                                            <button id = "add_proc_button" type="submit">Add Proc</button>
+                                            <button id = "add_proc_button" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" type="submit">Add Procedure</button>
                                             {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                         </div>
                                         <p> </p>
