--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -322,150 +322,63 @@
                 <script>
                     const ingredient1 = [  [1, 9, 10] ,  [2, 1, 0] , [], [4, 90, 120]];
                     const ingredient2 = [  [1, 9, 10] ,  [] , [], [4, 90, 120]];
-                    {{!-- const ingredients = {{ingredient_dict}}; --}}
-                    {{!-- const ingredients = [ingredient1, ingredient2]; --}}
-                    {{!-- console.log(ingredients); --}}
+                    
+                    // var ingredientsJSON = JSON.stringify({{ingredient_dict}});
+                    const ingredients = JSON.parse('{{{ingredient_dict}}}');
+                    console.log(ingredients);
+                    // const ingredients = [ingredient1, ingredient2];
+                    // const decodedString = he.decode('{{ingredient_dict}}');
+                    // const ingredients = JSON.parse(decodedString);
                     const trial_data = {{trial_data}};
                     $("#info").append("<tr>");
-                    for (let i = 1; i < trial_data.length+1; i++) {
-                        {{!-- $("#info").append("<tr>");
-                        $("#info").append("<th >Trial "+i+"</th>"); --}}
-                        $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis;\">Trial "+i+" Amount </th>");
-                        $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis;\">Trial "+i+" Percentage</th>");
+                    
+                    console.log("TRIAL TRIAL DATA DATA ");
+                    if (trial_data == 0){
+                        $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis;\">Add a Trial!</th>");
+
+                    }
+                    for (let i = 0; i < trial_data; i++) {
+                        // $("#info").append("<tr>");
+                        console.log(i);
+                        // $("#info").append("<th >Trial "+i+"</th>"); 
+                        $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis;\">Trial "+(i+1)+" Amount </th>");
+                        $("#info").append("<th style=\"white-space: nowrap; overflow: hidden; text-overflow: ellipsis;\">Trial "+(i+1)+" Percentage</th>");
                     }
                     $("#info").append("</tr>");
                     
                     
-                    {{!-- for (let i = 0; i < ingredients.length; i++) {
-                        $("#info").append("<tr>");
-                        for (let j = 0; j < ingredients[i].length; j++) {
-                            for (let key in ingredients[i][j]) {
-                                $("#info").append("<td style=\"padding:20px; text-align:center\">" + ingredients[i][j][key] + "</td>");
-                            }
-                        }
-                        $("#info").append("</tr>");
-                    } --}}
-                    {{!-- for (let ingredient of ingredients){
-                        $("#info").append("<tr>");
-                        for (let trial = 0; trial < ingredient.length; trial++) {
-                            if (ingredient[trial].length === 0) {
-                                console.log("empty");
-                                $("#info").append("<td style=\"padding:20px; text-align:center\"></td>");
-                                $("#info").append("<td style=\"padding:20px; text-align:center\"></td>");
-                            }
-                            else {
-                                console.log(ingredient[trial][1]);
-                                console.log(ingredient[trial][2]);
-                                $("#info").append("<td style=\"padding:20px; text-align:center\">" + ingredient[trial][1] + "</td>");
-                                $("#info").append("<td style=\"padding:20px; text-align:center\">" + ingredient[trial][2] + "</td>");
-                            }
-
-                            {{!-- $("#info").append("<tr>");
-                            for (let key in ingredient[i]) {
-                                if (ingredient)
-                                $("#info").append("<td style=\"padding:20px; text-align:center\">" + ingredient[i][1] + "</td>");
-                                $("#info").append("<td style=\"padding:20px; text-align:center\">" + ingredient[i][2] + "</td>");
-                            }  --}}
-                        }
-                        $("#info").append("</tr>");
-                    }; --}}
-                    
                    
+                   console.log(ingredients);
                     
-                    
-
-                                        
-                    {{!-- for (let i = 0; i < 7; i++)
-                    if ((i%2) == 0){
-                        $("#info").append("<tr>");
-                        $("#info").append("<td>"+i+"hi</td>");
-                        $("#info").append("<td>"+i+"bye</td>");
-                        $("#info").append("</tr>");
-
-
-
-                    }
-                    else{
-                        $("#info").append("<tr>");
-                        $("#info").append("<td></td>");
-                        $("#info").append("<td></td>");
-                        $("#info").append("</tr>");
-                    }
-                        $("#info").append("<tr>");
-                        $("#info").append("<td>New Row</td>");
-                        $("#info").append("</tr>"); --}}
-                    
-                    for(var trial_num in trial_data)
+                    for(let ing = 0; ing < ingredients.length; ing++)
                         {
-                            for(var ingredient in ing_data)
+                            $("#info").append("<tr>");
+                            for(let trial = 0; trial < ingredients[ing].length; trial++)
                             {
-                                $("#info").append("<tr>");
-                                if(ingredient.trialnum == ingredient.trialnum){ $("#info").append("<td>hi</td>");}
-                                else {$("#info").append("<td></td>");}
-
+                                console.log("hi");
+                                // console.log(ingredients[ing][trial][0].trial_num);
+                                if (ingredients[ing][trial].length !== 0){
+                                    console.log(ingredients[ing][trial]);
+                                    $("#info").append("<td>"+ingredients[ing][trial][0]['total_amount']+"</td>");
+                                    $("#info").append("<td>"+ingredients[ing][trial][0]['percent_of_ingredient']+"</td>");
+                                }
+                                else {
+                                    $("#info").append("<td></td>");
+                                    $("#info").append("<td></td>");
+                                }
+                            
                             }
+                            $("#info").append("</tr>");
                         }
                 </script>
 
-                    <!-- Add the jsPDF library script tag -->
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.0/jspdf.umd.min.js"></script>
+                  
 
-                    <!-- Define the printing2() function after the jsPDF library is loaded -->
-                    {{!-- <script>
-                    function printing2() {
-                        console.log("PRINTING ATTEMPT2")
-
-                        // Create a new jsPDF instance
-                        var doc = new jsPDF();
-                    
-                        // Define the table columns and rows
-                        var columns = ["Name", "Country", "Population"];
-                        var rows = [
-                        ["China", "Asia", "1,439,323,776"],
-                        ["India", "Asia", "1,380,004,385"],
-                        ["United States", "North America", "331,002,651"],
-                        ["Indonesia", "Asia", "273,523,615"],
-                        ["Pakistan", "Asia", "220,892,340"]
-                        ];
-                    
-                        // Call the autoTable function to generate the table
-                        doc.autoTable(columns, rows);
-                    
-                        // Save the PDF
-                        doc.save("table.pdf");
-                    }
-                    </script> --}}
-
-                    <!-- Call the printing2() function when the button is clicked -->
-                    {{!-- <button onclick="printing2()" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Print</button> --}}
-
+    
 
                 </div>
             </div>
-{{!-- 
-    {{#each trial_data}}
-        <script>
-            function loadSection1Data() {
-            // make an AJAX request to the server to retrieve data for section1
-            // define the SQL query to retrieve the specific data required for section1
 
-            // update the HTML content of section1 with the retrieved data
-            document.getElementById("section1").innerHTML = "<p>Section 1 Data</p>";
-            }
-
-            function loadSection2Data() {
-            // make an AJAX request to the server to retrieve data for section2
-            // define the SQL query to retrieve the specific data required for section2
-
-            // update the HTML content of section2 with the retrieved data
-            document.getElementById("section2").innerHTML = "<p>Section 2 Data</p>";
-            }
-
-            // call each function to load the data for the corresponding section when the page loads
-            loadSection1Data();
-            loadSection2Data();
-        </script>
-    {{#each}} --}}
     </body>
 
 
