--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -234,7 +234,7 @@
                                 <h1 style="font-size:40px;">Make Trial</h1>
 
                                 {{!-- somehow get the formula of the tab clicked on --}}
-                                <form method="POST" action="/projects/{{project_id}}/trial{{trial_num1}}/makeformsubmit">
+                                <form method="POST" action="/projects/{{project_id}}/trial/makeformsubmit">
                                     <article class="regular">
                                         {{!-- <h2>Textbook</h2> --}}
 
